# PACS

./: .gitignore  README.md  dataloader.py  make_csv.py  preprocess_mammo.py  preprocessing.ipynb  pyproject.toml  test.py  train.py  visualize_training.py
experiment2/: dataset.py  pretrain.ipynb  run.sh  train.py  train_mvt.py
experiment2/model/: backbone_4_channel.py  baseline.py  mamvt.py  maxvit.py
model/: cnn.py  cnn_with_mlp.py  cnn_with_vit.py
